chore(java, api-tests): upgrade api-tests to java 17
Rewrite some old Java 11 API calls in the ors api-tests code, migrating them to Java 17 standards.